// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Regular User Home (No Entries) 1`] = `
<div>
  <div>
    <div
      className="date-filters"
    >
      Filters:
      <div>
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              className="form-control date-filter"
              disabled={false}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="From.."
              readOnly={undefined}
              required={undefined}
              tabIndex={undefined}
              title={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div>
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              className="form-control date-filter"
              disabled={false}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="To.."
              readOnly={undefined}
              required={undefined}
              tabIndex={undefined}
              title={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div />
    <div>
      No Entries created
    </div>
    <a
      href="/report"
      onClick={[Function]}
    >
      Report by week
    </a>
    <div
      className="action-footers"
    >
      <a
        className="btn btn-primary"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Regular User Home (With Entries) 1`] = `
<div>
  <div>
    <div
      className="date-filters"
    >
      Filters:
      <div>
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              className="form-control date-filter"
              disabled={false}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="From.."
              readOnly={undefined}
              required={undefined}
              tabIndex={undefined}
              title={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div>
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              className="form-control date-filter"
              disabled={false}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="To.."
              readOnly={undefined}
              required={undefined}
              tabIndex={undefined}
              title={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div />
    <table
      className="table"
    >
      <thead>
        <tr>
          <th>
            Date
          </th>
          <th>
            Distance
          </th>
          <th>
            Time
          </th>
          <th>
            Speed
          </th>
          <th>
            Action
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="date"
          >
            Sunday, September 3rd 2017
          </td>
          <td>
            100
             m
          </td>
          <td>
            100
             s
          </td>
          <td>
            1
             m/s
          </td>
          <td
            className="actions"
          >
            <a
              className="btn btn-danger"
              onClick={[Function]}
            >
              <i
                className="fa fa-trash"
              />
            </a>
            <a
              className="btn btn-warning"
              onClick={[Function]}
            >
              <i
                className="fa fa-edit"
              />
            </a>
          </td>
        </tr>
        <tr>
          <td
            className="date"
          >
            Wednesday, September 6th 2017
          </td>
          <td>
            200
             m
          </td>
          <td>
            200
             s
          </td>
          <td>
            1
             m/s
          </td>
          <td
            className="actions"
          >
            <a
              className="btn btn-danger"
              onClick={[Function]}
            >
              <i
                className="fa fa-trash"
              />
            </a>
            <a
              className="btn btn-warning"
              onClick={[Function]}
            >
              <i
                className="fa fa-edit"
              />
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <a
      href="/report"
      onClick={[Function]}
    >
      Report by week
    </a>
    <div
      className="action-footers"
    >
      <a
        className="btn btn-primary"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus"
        />
      </a>
    </div>
  </div>
</div>
`;
